Refactored output directory structure to use 'outputs' instead of 'execution'